--- a/src/app/issue-list/issue-list.component.html
+++ b/src/app/issue-list/issue-list.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="showReportIsue ===false" >
-<button class="btn-primary btn" (click)="showReportIsue = true">Add new Issue</button>
+<ng-container *ngIf="showReportIssue ===false" >
+<button class="btn-primary btn" (click)="showReportIssue = true">Add new Issue</button>
 <clr-datagrid>
 	<clr-dg-column [clrDgField]="'issueNo'"
 	[clrDgColType]="'number'">Issue No</clr-dg-column>
@@ -19,4 +19,4 @@
 	<clr-dg-footer>{{issues.length}} issues</clr-dg-footer>
 </clr-datagrid>
 </ng-container>
-<app-issue-report *ngIf="showReportIsue === true" (formClose)="onCloseReport()"></app-issue-report>
+<app-issue-report *ngIf="showReportIssue === true" (formClose)="onCloseReport()"></app-issue-report>
