--- a/src/app/issue-report/issue-report.component.html
+++ b/src/app/issue-report/issue-report.component.html
@@ -1,5 +1,5 @@
 <h3>Report an issue</h3>
-<form clrForm *ngIf="issueForm" [formGroup]="issueForm" (ngSubmit)="addIssue">
+<form clrForm *ngIf="issueForm" [formGroup]="issueForm" (ngSubmit)="addIssue()">
 	<clr-input-container>
 		<label>Title</label>
 		<input clrInput formControlName="title" />
@@ -27,5 +27,6 @@
 			<option value="Documentation">Documentation</option>
 		</select>
 	</clr-select-container>
-	<button class="btn btn-primary" type="submit" (click)="formClose.emit()">Create</button>
+	<button class="btn btn-primary" type="submit">Create</button>
+	<button class="btn" type="submit" (click)="formClose.emit()">cancel</button>
 </form>
