--- a/src/app/issue-list/issue-list.component.html
+++ b/src/app/issue-list/issue-list.component.html
@@ -10,6 +10,7 @@
 	<clr-dg-row *clrDgItems="let issue of issues">
 		<clr-dg-action-overflow>
 			<button class="action-item" (click)="selectedIssue = issue" >Resolve</button>
+			<button class="action-item" (click)="editIssue = issue">Edit</button>
 		</clr-dg-action-overflow>
 		<clr-dg-cell>{{issue.issueNo}}</clr-dg-cell>
 		<clr-dg-cell>{{issue.type}}</clr-dg-cell>
@@ -24,3 +25,4 @@
 </ng-container>
 <app-issue-report *ngIf="showReportIssue === true" (formClose)="onCloseReport()"></app-issue-report>
 <app-confirm-dialog *ngIf="selectedIssue" [issueNo]="selectedIssue.issueNo" (confirm)="onConfirm($event)"></app-confirm-dialog>
+<app-issue-edit *ngIf="editIssue" [issue]="editIssue" (formClose)="onCloseEdit()"></app-issue-edit>
